# argclz

./: README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: pyright.yml  python-cov.yaml  python-publish.yml
docs/: gen_api.py
docs/source/: compose_cli.rst  conf.py  dispatch.rst  index.rst  organized_arguments.rst
docs/source/_templates/: class.rst
docs/source/api/: argclz._validators._numpy.rst  argclz._validators.rst  argclz.clone.rst  argclz.commands.rst  argclz.core.rst  argclz.desp.rst  argclz.dispatch.annotations.rst  argclz.dispatch.builder.rst  argclz.dispatch.core.rst  argclz.dispatch.rst  argclz.i18n.rst  argclz.rst  argclz.types.rst  argclz.validator.rst  argp.clone.rst  argp.core.rst  argp.dispatch.annotations.rst  argp.dispatch.builder.rst  argp.dispatch.core.rst  argp.dispatch.rst  argp.rst  argp.types.rst  argp.validator.rst
docs/source/get_start/: advanced_usage.rst  compose_cli.rst  core_usage.rst  dispatch.rst  index.rst  organized_arguments.rst  subcommands.rst  type_parser.rst  utilities.rst  validator.rst
res/: example_commands.py  example_dispatch.py  example_experiment.py  example_plotting.py
src/argclz/: __init__.py  _desp.py  _types.py  _validator.py  clone.py  commands.py  core.py  desp.py  i18n.py  types.py  validator.py
src/argclz/_validators/: _numpy.py
src/argclz/dispatch/: __init__.py  _format.py  _format_rich.py  _format_text.py  annotations.py  builder.py  core.py  formats.py
src/argp/: __init__.py  _type.py  _types.py  clone.py  core.py  dispatch.py  types.py  validator.py
src/argp/dispatch/: _format_rich.py  builder.py  core.py
test/unit/: test_argp.py  test_cmd.py  test_compose.py  test_dispatch.py  test_help.py  test_type.py  test_validator.py
