[project]
name = "argp"
version = "0.0.0"
requires-python = ">=3.10"
description = "Create commandline interface via dataclass-like class"
authors = [
    { name = "Yu-Ting Wei", email = "ytsimon2004@gmail.com" },
    { name = "Ta-Shun Su", email = "antoniost29@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["commandline"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    'Intended Audience :: Developers',
    "Typing :: Typed",
]

dependencies = []


[project.optional-dependencies]

opt = ['rich']
test = ['argp[opt]', 'coverage']
doc = ['sphinx', 'pydata-sphinx-theme']


[project.urls]
Homepage = "https://github.com/ytsimon2004/argp"
#Documentation = ""
Repository = "https://github.com/ytsimon2004/argp"
Issues = "https://github.com/ytsimon2004/argp/issues"


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
